# queryer

./: Cargo.toml  deny.toml
examples/: covid.rs  dialect.rs
queryer-py/: Cargo.toml  README.md  hello.py  pyproject.toml
queryer-py/src/: lib.rs
queryer/src/: fetcher.rs
src/: convert.rs  dialect.rs  lib.rs  loader.rs
