[package]
name = "queryer-py"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "queryer_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
queryer = { path = "../queryer" }
tokio = { version = "1", features = ["full"] }
